test/tests/MainBadSignature.expected
MainBadSignature.frost:2:5: error: 'main' must be a method
MainBadSignature.frost:2:5: error: 'main' must not have a return type
MainBadSignature.frost:2:5: error: 'main' must be declared @class
MainBadSignature.frost:2:5: error: 'main' must have either zero parameters or one parameter of type 'frost.collections.ListView<frost.core.String>'
4 errors
