test/tests/MainBadSignature.frost
class MainNotClass {
    function main(x:Int):Int {
        Console.printLine("Hello, World!")
        return 1
    }
}